<resources>
    <string name="app_name">Stationary App</string>
    <string name="name">Name</string>
    <string name="descriptionFood">Meaty portobello mushrooms make for the perfect vegetarian burger!</string>
    <string name="pen_stand">Pen Stand</string>
    <string name="order_number">Order Number</string>
    <string name="price">Total Price</string>
    <string name="sign">$</string>
    <string name="todo">TODO</string>
    <string name="description">Description</string>
    <string name="food_name">Food Name</string>
    <string name="your_name">Your Name</string>
    <string name="phone">Your Phone Number</string>
    <string name="place_order">Place Order</string>
    <string name="update_order">Update Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>