<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detailImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/pen" />

            <TextView
                android:id="@+id/detailFoodName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gravitas_one"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/food_name"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@color/orderButtonBackground"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/subtract"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/minus" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="1"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/add"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_input_add" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detailDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/descriptionFood" />

        <EditText
            android:id="@+id/nameBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp" />

        <EditText
            android:id="@+id/phoneBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/priceLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="45"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/insertBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/gravitas_one"
            android:text="@string/place_order"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</LinearLayout>